# vdeg

./: ANTI_AVERAGE_LOSS.md  CLAUDE.md  COLORIZATION_FINAL.md  COLORIZATION_FIX.md  COLORIZATION_GUIDE.md  COLORIZATION_TUNING.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  README.md  REAL_FIX.md  debug_colorization.py  detailed_debug.py  pyproject.toml  resume_training.py  test_hat.py  test_hat_debug.py  test_multitask_gan.py  test_multitask_training.py  test_training.py  train.py  train_colorization_balanced.py  train_image_restoration.py  train_multitask.py  train_multitask_gan.py  train_video_restoration.py  video_gui.py  video_restoration_gui.py
src/: __init__.py  config.py
src/datasets/: __init__.py  image_dataset.py  video_dataset.py
src/degradations/: __init__.py  base.py  blur.py  color.py  compression.py  downscale.py  multitask.py  noise.py  super_resolution.py
src/losses/: __init__.py  colorization.py  colorization_antiaverage.py  colorization_classification.py  colorization_classification_simple.py  colorization_fixed.py  colorization_v2.py  colorization_v3.py  colorization_weighted.py  core.py  gan.py  mixed.py  multitask.py  multitask_gan.py  perceptual.py
src/models/: __init__.py  base.py  discriminator.py  hat.py  hat_simple.py  simple_unet.py  simple_unet_colorization.py
src/training/: __init__.py  gan_trainer.py  multitask_gan_trainer.py  trainer.py
src/utils/: __init__.py  checkpoint.py  ema.py  export.py  logger.py
